# gst-nvmm-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  config.h.cmake.in  meson.build  meson_options.txt  mkdocs.yml  run.sh
.github/workflows/: ci.yml  docs.yml  release.yml
analytics/: README.md  active_region.hpp  analytics_kernels.cu  analytics_kernels.hpp  detection_motion_gate.hpp  dual_homography.hpp  image.hpp  image_ops.hpp  low_texture_motion.hpp  meson.build  motion_magnify.hpp  persistence_gate.hpp
analytics/detail/: features.hpp  homography.hpp
benchmarks/: CMakeLists.txt  bench_analytics.cpp  bench_analytics_cuda.cpp  bench_gmc.cpp  bench_ipc_backend.cpp  bench_nvmm.cpp  bench_scene.h  meson.build
docker/: Dockerfile.dev  Dockerfile.jetson  Dockerfile.jetson-jp5  Dockerfile.jetson-jp6  Dockerfile.jetson-jp6-infer  Dockerfile.kalmannet-bench  Dockerfile.yolo-reference
docs/: ANALYTICS_NO_OPENCV_PLAN.md  B5_NVMMINFER_DESIGN.md  HW_ACCEL_EXPLORATION.md  PRODUCTION_PLAN.md  building-engines.md  embedding.md  extending.md  getting-started.md  harness.md  index.md  inference-graphs.md  ipc.md  kalmannet-benchmark.md  metadata-ipc.md  pipelines.md  tracker-pipeline.md  validation.md
docs/elements/: nvmmalloc.md  nvmmappsrc.md  nvmmcompositor.md  nvmmconvert.md  nvmmdrawdet.md  nvmmfusekf.md  nvmmfusion.md  nvmminfer.md  nvmmofa.md  nvmmsamurai.md  nvmmsecondaryinfer.md  nvmmsink.md  nvmmtracker.md
examples/: meson.build  programmatic_pipeline.cpp
gst/common/: CMakeLists.txt  fd_ipc.h  ipc_backend.h  kalman_box.cpp  kalman_box.hpp  meson.build  nvbufsurface_mock.h  nvmm_buffer.cpp  nvmm_buffer.hpp  nvmm_buffer_mock.cpp  nvmm_caps.h  nvmm_class_meta.cpp  nvmm_class_meta.h  nvmm_config.h  nvmm_det_meta.cpp  nvmm_det_meta.h  nvmm_meta_util.h  nvmm_motion.cpp  nvmm_motion.hpp  nvmm_motion_meta.cpp  nvmm_motion_meta.h  nvmm_optical_flow_meta.cpp  nvmm_optical_flow_meta.h  nvmm_track_meta.cpp  nvmm_track_meta.h  nvmm_transform.cpp  nvmm_transform.hpp  nvmm_transform_mock.cpp  nvmm_types.hpp  phase_correlation.hpp  shm_protocol.h  vit_grid.hpp  xfeat_matcher.cpp  xfeat_matcher.hpp  xfeat_motion.hpp  xfeat_register.hpp  xfeat_sparse.hpp
gst/ipc_jp5/: ipc_jp5.cpp  meson.build
gst/ipc_jp6/: ipc_jp6.cpp  meson.build
gst/ipc_pool/: ipc_pool.cpp  meson.build
gst/nvmmalloc/: CMakeLists.txt  gstnvmmallocator.cpp  gstnvmmallocator.h  gstnvmmbufferpool.cpp  gstnvmmbufferpool.h  meson.build  plugin.cpp
gst/nvmmappsrc/: CMakeLists.txt  gstnvmmappsrc.cpp  gstnvmmappsrc.h  meson.build
gst/nvmmcompositor/: gstnvmmcompositor.cpp  gstnvmmcompositor.h  meson.build
gst/nvmmconvert/: CMakeLists.txt  gstnvmmconvert.cpp  gstnvmmconvert.h  meson.build  plugin.cpp
gst/nvmmdrawdet/: font6x8.h  gstnvmmdrawdet.cpp  gstnvmmdrawdet.h  meson.build
gst/nvmmdronedet/: dronedet_gate.hpp  gstnvmmdronedet.cpp  meson.build
gst/nvmmexample/: gstnvmmdetlog.cpp  meson.build
gst/nvmmfusekf/: gstnvmmfusekf.cpp  gstnvmmfusekf.h  meson.build
gst/nvmmfusion/: gstnvmmfusion.cpp  gstnvmmfusion.h  meson.build
gst/nvmminfer/: gstnvmminfer.cpp  gstnvmminfer.h  meson.build  preprocess.cpp  preprocess.hpp  trt_engine.cpp  trt_engine.hpp  yolo_parser.cpp  yolo_parser.hpp
gst/nvmmofa/: gstnvmmflowstats.cpp  gstnvmmflowstats.h  gstnvmmofa.cpp  gstnvmmofa.h  meson.build
gst/nvmmsamurai/: gmc_backend.hpp  gmc_mask.hpp  gmc_vpi_fft.hpp  gmc_vpi_pva.hpp  gstnvmmsamurai.cpp  gstnvmmsamurai.h  meson.build  samurai_consts.hpp  samurai_gmc.hpp  samurai_kernels.cu  samurai_kernels.hpp  samurai_memory.hpp  samurai_seed_math.hpp  samurai_tracker.cpp  samurai_tracker.hpp  samurai_view.hpp
gst/nvmmsecondaryinfer/: gstnvmmsecondaryinfer.cpp  gstnvmmsecondaryinfer.h  meson.build  roi_preprocess.cpp  roi_preprocess.hpp  secondary_cache.cpp  secondary_cache.hpp
gst/nvmmsink/: CMakeLists.txt  gstnvmmsink.cpp  gstnvmmsink.h  meson.build
gst/nvmmtracker/: gstnvmmtracker.cpp  gstnvmmtracker.h  meson.build  tracker.cpp  tracker.hpp
probes/: nvmmalloc_tee_zerocopy.cpp  trt_nvbufsurface_probe.cpp  vpi_ofa_probe.cpp  vpi_pva_probe.cpp
scripts/: jetson-test.sh  nvmminfer_docker_e2e.sh  nvmminfer_golden_test.sh  nvmminfer_overlay_e2e.sh  run-fuzz.sh  run-sanitizers.sh  stage-nvmm-libs.sh  tsan.supp
tests/: CMakeLists.txt  analytics_kernel_probe.cpp  analytics_scene.h  demo_visual_roundtrip.cpp  fuzz_gmc.cpp  fuzz_shm_header.cpp  golden_util.h  meson.build  samurai_enc_probe.cpp  samurai_kernel_probe.cpp  samurai_mem_probe.cpp  seed_math_probe.cpp  test_analytics_active_region.cpp  test_analytics_detection_motion_gate.cpp  test_analytics_dual_homography.cpp  test_analytics_low_texture_motion.cpp  test_analytics_motion_magnify.cpp  test_analytics_persistence_gate.cpp  test_backend_concurrency.cpp  test_gmc_backend.cpp  test_gmc_mask.cpp  test_golden_active_region.cpp  test_golden_dual_homography.cpp  test_golden_image_ops.cpp  test_golden_low_texture_motion.cpp  test_golden_motion_magnify.cpp  test_gst_nvmm_allocator.cpp  test_gstcheck_elements.cpp  test_harness.h  test_integration.cpp  test_kalman_box.cpp  test_nvmm_appsrc.cpp  test_nvmm_buffer.cpp  test_nvmm_class_meta.cpp  test_nvmm_compositor.cpp  test_nvmm_det_meta.cpp  test_nvmm_motion.cpp  test_nvmm_sink.cpp  test_nvmm_track_meta.cpp  test_nvmm_tracker.cpp  (+9 more)
tools/: build_engine.sh  gen_font.py  golden_compare.py  pipeline_bench.py  score_pr.py  yolo_reference.py
tools/kalmannet_bench/: NOTES.md  REPORT.md  bench_latency.py  docker_run.sh  eval.py  eval_knet.py  eval_rkn.py  make_animation.py  make_plots.py  motion-hud-video-plan.md  requirements.txt  train_knet.py  train_rkn.py  tune_imm.py
tools/kalmannet_bench/data/: config.py  make_dataset.py  trajectory_gen.py
tools/kalmannet_bench/filters/: discretize.py  ekf.py  imm.py  measurement_model.py  metrics.py  motion_models.py  state.py  torch_ops.py  ukf.py
tools/kalmannet_bench/tests/: test_discretize.py  test_ekf_ukf.py  test_imm.py  test_knet_filter.py  test_measurement_model.py  test_metrics.py  (+4 more)
tools/samurai/: build_engines.sh  export_onnx.py  pack_consts.py
(+4 files in other folders)
