option('mock',
  type : 'boolean',
  value : false,
  description : 'Build with the mock NvBufSurface API for host-side unit tests. ' +
                'Production builds must NOT enable this — the mock has no GPU, ' +
                'no DMA-buf fds, and no real surfaces. Default false.')

option('pool_release_delay',
  type : 'integer',
  min : 1, max : 64, value : 4,
  description : 'Frames the consumer keeps a slot ref alive after fetch, to ' +
                'cover downstream encoder pipeline depth. Default 4.')

option('poll_interval_us',
  type : 'integer',
  min : 100, max : 100000, value : 1000,
  description : 'Consumer + producer-handshake poll interval in microseconds. ' +
                'Lower = lower latency, higher CPU. Default 1000 (1 ms).')

option('fetch_idle_ticks',
  type : 'integer',
  min : 0, max : 1000000, value : 2000,
  description : 'Consumer EOS timeout in poll-interval ticks. 0 disables (block forever). ' +
                'Default 2000 ticks * 1ms = 2s.')
